# zpulib

./: .gitignore  Makefile.in  README.md  config.h.in  configure  configure.in  test.c
include/: zpu.h  zpu_commands.h
libzpu-python/: Makefile.in  config.h.in  configure  configure.in  setup.py
libzpu-python/src/: libpyzpu.c
src/: zpu.c
test-bin/: helloworld.hex
