#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([libzpu], [1.0], [oliver.erxleben@hs-osnabrueck.de])
AC_CONFIG_SRCDIR([src/zpu.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

# Checks for libraries.
AC_CHECK_LIB([cintelhex],[ihex_rs_from_file,ihex_rs_from_string],[],[AC_MSG_ERROR([Could not find cintelhex library.])])

# Checks for header files.
AC_CHECK_HEADERS([cintelhex.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([libcintelhex])

AC_OUTPUT
