#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([libzpu], [1.0], [oliver.erxleben@hs-osnabrueck.de])
AC_CONFIG_SRCDIR([src/zpu.c])
AC_CONFIG_HEADERS([config.h])

AC_PREFIX_DEFAULT([/usr/])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

# Checks for libraries.
AC_CHECK_LIB([cintelhex],[ihex_rs_from_file],[],[AC_MSG_ERROR([Could not find cintelhex library.])])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h cintelhex.h fcntl.h sys/ioctl.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_CHECK_FUNCS([munmap snprintf open close ioctl])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([libcintelhex])

AC_OUTPUT
